# Roc

./: .gitignore  CMakeLists.txt  README.md  build.json  build.py
docs/: ARCHITECTURE.md
scripts/: deps.py  formats.py  math.py  shaders.py  utils.py  wayland.py
src/core/: chrono.cpp  chrono.hpp  cmd-parse.hpp  color.hpp  containers.hpp  debug-checks.inl  debug.cpp  debug.hpp  enum.hpp  env.hpp  event.cpp  event.hpp  exec.cpp  exec.hpp  fd.cpp  fd.hpp  hash.hpp  id.hpp  log.cpp  log.hpp  math.hpp  memory.cpp  memory.hpp  object.cpp  object.hpp  pch.hpp  process.cpp  process.hpp  region.hpp  signal.hpp  spawn.cpp  spawn.x86_64.S  stack.hpp  stacktrace.cpp  stacktrace.hpp  string.cpp  string.hpp  timer.cpp  timer.hpp  types.hpp  (+2 more)
src/exec/: exec.cpp  exec.hpp
src/gpu/: buffer.cpp  commands.cpp  descriptors.cpp  formats.cpp  formats.inl  functions.cpp  functions.hpp  gpu.cpp  gpu.hpp  image-pool.cpp  image.cpp  internal.hpp  pipeline.cpp  sampler.cpp  semaphore.cpp
src/gpu/shaders/: shared.glsl  shared.h  shared.slang
src/imui/: imgui.cpp  imui.hpp  internal.hpp
src/io/: input.cpp  internal.hpp  io.cpp  io.hpp  main.cpp  output.cpp
src/io/drm/: debug.hpp  drm.cpp  drm.hpp  properties.cpp
src/io/evdev/: evdev.cpp
src/io/libinput/: events.cpp  libinput.cpp  libinput.hpp
src/io/session/: session.cpp  session.hpp
src/io/udev/: udev.cpp
src/io/wayland/: output.cpp  seat.cpp  wayland.cpp  wayland.hpp
src/roc/: main.cpp  roc.hpp  xwayland.cpp
src/roc/app/: background.cpp  launcher.cpp  log-viewer.cpp
src/scene/: client.cpp  compute.cpp  cursor.cpp  damage.cpp  data.cpp  input.cpp  internal.hpp  node.cpp  output.cpp  render.cpp  scene.cpp  scene.hpp  seat.cpp  window.cpp
src/scene/node/: base.hpp  input-region.cpp  mesh.cpp  node.cpp  texture.cpp  tree.cpp
src/scene/shader/: bin.comp.glsl  bin.glsl  common.glsl  compute-bin.glsl  compute-pixel.glsl  compute.h  compute2-bin.glsl  compute2-pixel.glsl  output.comp.glsl  pixel.glsl  raster-fragment.glsl  raster-output.glsl  raster-vertex.glsl  render.comp.glsl  render.frag.glsl  render.glsl  render.h  render.vert.glsl
src/seat/: client.cpp  cursor.cpp  data.cpp  focus.cpp  input-region.cpp  internal.hpp  keyboard.cpp  pointer.cpp  seat.cpp  seat.hpp
src/shell/: background.cpp  hotkeys.cpp  io.cpp  main.cpp  shell.hpp  xwayland.cpp
src/shell/app/: background.cpp  launcher.cpp  log-viewer.cpp
src/ui/: font.cpp  internal.hpp  string.cpp  ui.cpp  ui.hpp
src/way/: buffer.cpp  client.cpp  client.hpp  cursor-shape.cpp  data.cpp  decoration.cpp  dmabuf.cpp  internal.hpp  output.cpp  popup.cpp  seat.cpp  server.cpp  server.hpp  shell.cpp  shm.cpp  subsurface.cpp  surface.cpp  util.cpp  util.hpp  viewport.cpp  way.cpp  way.hpp
src/way/buffer/: buffer.cpp  buffer.hpp  dmabuf.cpp  shm.cpp  syncobj.cpp
src/way/data/: data.cpp  data.hpp
src/way/output/: output.cpp
src/way/seat/: cursor-shape.cpp  internal.hpp  keyboard.cpp  pointer-constraints.cpp  pointer.cpp  relative-pointer.cpp  seat.cpp  seat.hpp
src/way/shell/: activation.cpp  popup.cpp  shell.cpp  shell.hpp
src/way/surface/: region.hpp  state.hpp  subsurface.cpp  surface.cpp  surface.hpp  viewport.cpp
src/wm/: background.cpp  client.cpp  cursor.cpp  focus.cpp  hotkeys.cpp  interaction.cpp  internal.hpp  io.cpp  launcher.cpp  log.cpp  main.cpp  movesize.cpp  pointer-constraints.cpp  render.cpp  seat.cpp  selection.cpp  toast.cpp  window.cpp  wm.cpp  wm.hpp  zone.cpp
src/wroc/: buffer.cpp  client.cpp  cursor.cpp  data.cpp  debug.cpp  decoration.cpp  dmabuf.cpp  imgui.cpp  interaction.cpp  keyboard.cpp  output.cpp  pointer.cpp  process.cpp  protocol.hpp  renderer.cpp  seat.cpp  server.cpp  shm.cpp  subsurface.cpp  surface.cpp  syncobj.cpp  util.cpp  util.hpp  viewporter.cpp  wroc.hpp  xdg_shell.cpp
src/wroc/applets/: launcher.cpp
src/wroc/backend/: backend.cpp
src/wroc/backend/direct/: backend.cpp  backend.hpp  drm.cpp  events.cpp  input.cpp
src/wroc/backend/wayland/: backend.hpp  output.cpp  seat.cpp  wayland.cpp
